--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
+        maven {
+            url uri("./repo")
+        }
         google()
         jcenter()
 
     }
     dependencies {
+        // java.lang.NoClassDefFoundError: com/android/tools/lint/ "LintCliClient"
+        classpath 'com.android.tools.lint:lint:27.1.1'
         classpath 'com.android.tools.build:gradle:4.1.1'
+        //classpath 'org.codehaus.groovy:groovy-all:2.5.11'
+        classpath 'com.example:lintPlugin:1.0.4.14'
+
     }
 }
 
