--- a/lintplugin/build.gradle
+++ b/lintplugin/build.gradle
@@ -4,9 +4,10 @@ plugins {
     id 'groovy'
     id 'java-gradle-plugin'
 }
+apply plugin: 'com.android.lint'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //implementation fileTree(dir: 'libs', include: ['*.jar'])
     //implementation (name:'lintaar-debug', ext:'aar')
     compileOnly "com.android.tools.lint:lint-api:27.1.1"
     compileOnly "com.android.tools.lint:lint-checks:27.1.1"
@@ -17,7 +18,7 @@ dependencies {
 }
 
 group = 'com.example'
-version = '1.0.4.14'
+version = '1.0.0.4'
 
 // 发布到本地仓库
 uploadArchives {
@@ -41,5 +42,11 @@ gradlePlugin {
             id = 'com.example.lintPlugin'//plugin id
             implementationClass = 'com.example.lintplugin.LintPlugin'
         }
+    }
+}
+
+jar {
+    manifest {
+        attributes("Lint-Registry-v2": "com.example.lintjar.LintRegistry")
     }
 }
